Add dice and overlap algorithms

--- a/templates/home.html
+++ b/templates/home.html
@@ -7,16 +7,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
 </head>
 <body>
-<section class="section">
-    <div class="container">
-        <h1 class="title">
+<section class="hero is-link">
+    <div class="hero-body">
+        <p class="title">
             Text similarity detector
-        </h1>
+        </p>
         <p class="subtitle">
             Please enter some text in both the boxes below, select the algorithms to run, and click on calculate to view
             the results!
         </p>
-
     </div>
 </section>
 
